ecmascript/parser/tests/test262-error-references/fail/de47657baf74e60a.js.stderr
error: 'import', and 'export' cannot be used outside of module code
 --> $DIR/tests/test262-parser/fail/de47657baf74e60a.js:1:1
  |
1 | import { foo, bar }
  | ^^^^^^

